# fin_app_full

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  docker-compose.yml  start.sh  unsigned_jwt.txt
crates/back-api/: Cargo.toml
crates/back-api/migrations/: 20260415123002_companys_init.sql  20260424121615_persons_init.sql  20260508085126_sessions.sql  20260508151616_call_cf_init.sql
crates/back-api/src/: config.rs  main.rs
crates/back-api/src/db/: mod.rs
crates/back-api/src/db/parsers/cryptocp/: parser.rs
crates/back-api/src/db/parsers/dadata/: parser.rs
crates/back-api/src/db/service/: mod.rs
crates/back-api/src/db/service/auth_service/: by_auth_data.rs  by_device_token.rs  by_tel_call.rs  registration.rs  send_warn_mail.rs
crates/back-api/src/db/sql_queries/companys/: mod.rs
crates/back-api/src/db/sql_queries/persons/: mod.rs
crates/back-api/src/db/sql_queries/sessions/: mod.rs
crates/back-api/src/db/sql_queries/users/: mod.rs
crates/back-api/src/handlers/service/auth_service/: handler.rs
crates/back-api/src/models/: mod.rs  registration.rs
crates/back_api/: Cargo.toml  config.toml
crates/back_api/migrations/: 20260415123002_companys_init.sql  20260424121615_persons_init.sql  20260424125635_users_init.sql  20260508151616_call_cf_init.sql  20260723122545_operations.sql
crates/back_api/mock_storage/mchd/: storage.json
crates/back_api/src/: config.rs  main.rs
crates/back_api/src/db/: mod.rs  test.rs
crates/back_api/src/db/parsers/: mod.rs
crates/back_api/src/db/service/: mod.rs
crates/back_api/src/db/sql_queries/: mod.rs
crates/back_api/src/handlers/: mod.rs
crates/back_api/src/handlers/service/: mod.rs
crates/back_api/src/handlers/sql/: handlers.rs
crates/client-desktop/src-tauri/: Cargo.toml  config.toml  tauri.conf.json
crates/client-desktop/src-tauri/src/: commands.rs
crates/client-desktop/src-tauri/src/parsers/: mod.rs
crates/client_desktop/src-tauri/: Cargo.toml  config.toml  reg.doc  reg.doc.p7s  reg6.doc  tauri.conf.json  ul_fl_btb_app.xml  Хабипов_1660315827_166001001.json
crates/client_desktop/src-tauri/capabilities/: default.json
crates/client_desktop/src-tauri/migrations/: 20260416155743_companys.up.sql  20260416155743_counterparties.up.sql  20260503090203_persons_init.up.sql
crates/client_desktop/src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  state.rs
crates/client_desktop/src-tauri/src/back_api/: mod.rs  post_query.rs
crates/client_desktop/src-tauri/src/commands/: auth.rs  mchd.rs  mod.rs  other.rs
crates/client_desktop/src-tauri/src/service/: mod.rs
crates/client_desktop/src-tauri/src/sql_queries/: mod.rs
crates/crypto_service/: Cargo.toml  DockerFile
crates/crypto_service/src/: check_sign.rs  main.rs
crates/crypto_service/src/person_snils/: checker.rs  helper.rs  mod.rs
crates/shared-lib/: Cargo.toml
crates/shared-lib/src/alias_types/: implements.rs
crates/shared-lib/src/err_models/: implements.rs  macros.rs
crates/shared-lib/src/parsers/: mod.rs
crates/shared-lib/src/parsers/bank_statement/: macros.rs  mod.rs
crates/shared-lib/src/parsers/dadata/: implements.rs
crates/shared-lib/src/parsers/mchd/: Poa.rs  mod.rs
crates/shared-lib/src/primitives/calculated/: implements.rs
crates/shared-lib/src/primitives/composite/: implements.rs  validator_rules.rs
crates/shared-lib/src/primitives/frozen/: implplemets_base.rs  validator_base.rs  validator_rules.rs
crates/shared-lib/src/primitives/tax_frozen/: macros.rs  validator_rules.rs
crates/shared-lib/src/service/: mod.rs
crates/shared-lib/src/service/api_routes/: implements.rs
crates/shared-lib/src/service/auth_service/: implements.rs
crates/shared-lib/src/service/process/: mod.rs
crates/shared-lib/src/sql_models/: mod.rs
crates/shared-lib/src/sql_models/company_models/: implements.rs  mod.rs
crates/shared-lib/src/sql_models/person_models/: implements.rs  macros.rs  mod.rs
crates/shared-lib/src/sql_models/user_models/: implements.rs
crates/shared_lib/: Cargo.toml  output.rs
crates/shared_lib/src/: lib.rs
crates/shared_lib/src/alias_types/: implements.rs
crates/shared_lib/src/err_models/: implements.rs  mod.rs
crates/shared_lib/src/parsers/: mod.rs
crates/shared_lib/src/parsers/bank_statement/: implements.rs
crates/shared_lib/src/parsers/dadata/: implements.rs
crates/shared_lib/src/parsers/mchd/: implements.rs  mod.rs  poa.rs
crates/shared_lib/src/primitives/: macros.rs  mod.rs  svelte_validate.rs  traits.rs
crates/shared_lib/src/primitives/calculated/: macros.rs  mod.rs
crates/shared_lib/src/primitives/composite/: implements.rs  mod.rs
crates/shared_lib/src/primitives/frozen/: formatters.rs  implements.rs  implements_base.rs  macros.rs  mod.rs  validator_base.rs  validator_rules.rs
crates/shared_lib/src/primitives/tax_frozen/: implements.rs  validator_rules.rs
crates/shared_lib/src/service/: mod.rs
crates/shared_lib/src/service/api_routes/: implements.rs
crates/shared_lib/src/service/auth_service/: back_api_state.rs  client_state.rs  general.rs  implements.rs  mod.rs
crates/shared_lib/src/service/crypto_service/: implements.rs
crates/shared_lib/src/service/mchd/: home_mchd_power.rs  implements.rs  macros.rs  mod.rs  poa.rs  powers_btg.rs  service.rs  tax_mchd.rs
crates/shared_lib/src/sql_models/: mod.rs
crates/shared_lib/src/sql_models/company/: implements.rs
crates/shared_lib/src/sql_models/operation/: account.rs  implements.rs  mod.rs
crates/shared_lib/src/sql_models/person/: implements.rs  macros.rs
crates/shared_lib/src/sql_models/person_models/: implements.rs
crates/shared_lib/src/sql_models/session/: implements.rs
crates/shared_lib/src/sql_models/user/: implements.rs
crates/shared_lib/src/static_data/: const_var.rs  crypto_re.rs  mchd_const.rs  mod.rs  primitives_re.rs  static_re.rs
crates/shared_lib/src/static_data/mchd_powers/: document_propertys.rs  mod.rs  powers_btb.rs  powers_btg.rs  powers_fns.rs  powers_home.rs
crates/test_crate/: Cargo.toml  ip_person.xml  org_person.xml  org_person_text.xml
crates/test_crate/src/: main.rs
(+453 files in other folders)
