[workspace]
members = [
    "crates/back_api",
    "crates/client_desktop/src-tauri", 
    "crates/crypto_service",
    "crates/shared_lib"]
resolver = "2"

[workspace.dependencies]
shared_lib = { path = "crates/shared_lib" }

axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"] } # Выровняли до 0.12, чтобы уйти от старой 0.13.3 в shared

tokio = { version = "1", features = ["full"] }
futures = "0.3"

sqlx = { version = "0.8", features = ["macros", "runtime-tokio-rustls", "uuid", "chrono", "json"] }


serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11.19"
chrono = { version = "0.4.41", features = ["serde", "std"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }
rust_decimal = { version = "1.40.0", features = ["serde-float"] }
toml = "0.8"
dotenvy = "0.15.7"
regex = "1.12.3"


tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
log = "0.4"

argon2 = "0.5"
password-hash = "0.5"
rand = "0.10.1"
blake3 = "1.8.5"
encoding_rs = "0.8.35"