[package]
name="back-api"
version="0.1.0"
edition="2021"

[dependencies]
shared-lib={path="../shared-lib"}

axum = "0.7"
tower-http = { version = "0.5", features = ["trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"


tokio = { version = "1", features = ["full"] }

sqlx = { version = "0.8", features = [ 
    "macros",
    "runtime-tokio-rustls",
    "postgres",
    "uuid",
    "rust_decimal",
    "chrono",
    "json"
]}

serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
dotenvy = "0.15.7"

toml = "0.8"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
futures = "0.3"
uuid = { version = "1.21.0", features = ["v4", "serde"] }
chrono = { version = "0.4.41", features = ["serde", "std"] }

argon2 = "0.5"
password-hash = "0.5"
rand = "0.10.1"
blake3 = "1.8.5"
axum_typed_multipart = "0.16.5"
