[package]
name="back_api"
version="0.1.0"
edition="2021"

[dependencies]
shared_lib = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }

# Берем всё из воркспейса + добавляем специфичный для бэка postgres
sqlx = { workspace = true, features = ["postgres", "rust_decimal"] }

serde = { workspace = true }
serde_json = { workspace = true }
dotenvy = { workspace = true }
toml = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }

argon2 = { workspace = true }
password-hash = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }