[package]
name="back_api"
version="0.1.0"
edition="2021"

[dependencies]
shared_lib = { workspace = true }
axum = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }

sqlx = { workspace = true, features = ["postgres", "rust_decimal"] }

serde = { workspace = true }
serde_json = { workspace = true }

quick-xml = { workspace = true }

dotenvy = { workspace = true }

uuid = { workspace = true, features = ["v5"] }
chrono = { workspace = true }

toml = { workspace = true }

reqwest = { workspace = true, features = ["json", "rustls", "query"] }
tower-http = { workspace = true, features = ["trace"] }
reqwest-middleware = { workspace = true, features = ["json", "query"]  }
reqwest-retry = { workspace = true }

argon2 = { workspace = true }
password-hash = { workspace = true }
rand = { workspace = true }
blake3 = { workspace = true }

regex = { workspace = true }



