[package]
name = "crypto_service"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "crypto_service_bin"
path = "src/main.rs"

[dependencies]
shared_lib = { workspace = true }

axum = { workspace = true }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }


encoding_rs = { workspace = true }

tokio = { workspace = true }
serde =  {workspace = true}
serde_json = {workspace = true}
uuid = { workspace = true }

