[package]
name="shared-lib"
version="0.1.0"
edition="2021"


[dependencies]
tokio = { version = "1.52.2", features = ["sync"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_bytes = "0.11.19"

sqlx = { version = "0.8", default-features = false, features = [
    "macros",
    "chrono",
    "rust_decimal",
    "json",
    "uuid",
    "sqlite"
] }

reqwest = { version = "0.13.3", features = ["json"] }

axum = { version = "0.7", default-features = false }

chrono = { version = "0.4.41", features = ["serde", "std"] }
rust_decimal = { version = "1.40.0", features = ["db-postgres", "serde-float"] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }

regex = "1.12.3"

