[package]
name="shared_lib"
version="0.1.0"
edition="2021"

[features]
default = ["server"]
server = ["dep:axum"]

[dependencies]
tokio = { workspace = true, features = ["sync"] }

serde = { workspace = true }
serde_json = { workspace = true }
serde_bytes = { workspace = true }

quick-xml = { workspace = true }

chrono = { workspace = true }
uuid = { workspace = true }
regex = { workspace = true }

reqwest = { workspace = true, features = ["json", "rustls", "query"] }
tower-http = { workspace = true, features = ["trace"] }
reqwest-middleware = { workspace = true, features = ["json", "query"]  }
reqwest-retry = { workspace = true }

sqlx = { workspace = true, default-features = false, features = ["macros", "chrono", "rust_decimal", "json", "uuid", "sqlite", "postgres"] }
rust_decimal = { workspace = true, features = ["db-postgres"] }

axum = { workspace = true, optional = true, default-features = false }

tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

ts-rs = { workspace = true }

strum = { workspace = true }
strum_macros = { workspace = true }
