[package]
name = "test_crate"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = { version = "0.31", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

sqlx = { version = "0.8", default-features = false, features = [
    "macros",
    "chrono",
    "rust_decimal",
    "json",
    "uuid"
] }

shared-lib= {path="../shared-lib"}