[package]
name = "test_crate"
version = "0.1.0"
edition = "2024"

[dependencies]
quick-xml = { workspace = true, features = ["serialize"] }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0"

sqlx = { workspace = true, default-features = false, features = [
    "macros",
    "chrono",
    "rust_decimal",
    "json",
    "uuid"
] }

shared-lib= {path="../shared-lib"}