[package]
name = "app_exe"
version = "0.1.0"
description = "fin-app"
authors = [""]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"


[lib]
name = "back_lib"
crate-type = ["rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
shared_lib = { workspace = true }

tauri = { version = "2.10.3", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-log = "2.0.0-rc"

directories = "6.0.0"
keyring = "3.6.3"
machine-uid = "0.5.4"

tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
log = { workspace = true }
toml = { workspace = true }
dotenvy = { workspace = true }
encoding_rs = { workspace = true }

sqlx = { workspace = true, features = ["sqlite"] }
uuid = { workspace = true, features = ["v5"] }