[package]
name = "app_exe"
version = "0.1.0"
description = "fin-app"
authors = [""]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"


[lib]
name = "back_lib"
crate-type = ["rlib"]
path = "src/lib.rs"

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
shared_lib = { workspace = true }

tauri = { workspace = true, features = [] }
tauri-plugin-dialog = { workspace = true }
tauri-plugin-shell = { workspace = true }
tauri-plugin-log = { workspace = true }
tauri-plugin-fs = { workspace = true}
ts-rs = { workspace = true }

reqwest = { workspace = true, features = ["json", "rustls", "query"] }
reqwest-middleware = { workspace = true, features = ["json", "query"]  }
reqwest-retry = { workspace = true }

directories = { workspace = true }
keyring = { workspace = true }
machine-uid = { workspace = true }

tokio = { workspace = true }
futures = { workspace = true }

serde = { workspace = true }
serde_json = { workspace = true }

quick-xml = { workspace = true }

log = { workspace = true }
toml = { workspace = true }
dotenvy = { workspace = true }
encoding_rs = { workspace = true }

sqlx = { workspace = true, features = ["sqlite"] }
uuid = { workspace = true, features = ["v5"] }

blake3 = { workspace = true }

chrono = { workspace = true }

